<resources>
    <!--<string name="app_name">Reports</string>-->
    <!--<string name="title_0">Report Section</string>-->
    <!--<string name="desc_0">Section description comes here</string>-->
    <!--<string name="title_1">Report Section</string>-->
    <!--<string name="desc_1">Section description comes here</string>-->
    <!--<string name="title_2">Report Section</string>-->
    <!--<string name="desc_3">Section description comes here</string>-->

    <string name="app_name">Reports</string>
    <string name="title_0">Report Section</string>
    <string name="desc_0">
        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"
    </string>
    <string name="title_1">Report Section</string>
    <string name="desc_1">
        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
    </string>
    <string name="title_2">Report Section</string>
    <string name="desc_3">
        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
    </string>
</resources>
