<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.androidpractice.abha.reports.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.androidpractice.abha.reports.MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewStyleEven">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/ivZero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="23dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/tvZero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="@string/title_0"
                        android:layout_alignTop="@+id/ivZero"
                        android:layout_toEndOf="@+id/ivZero" />

                    <TextView
                        android:id="@+id/tvZeroDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_0"
                        android:layout_below="@+id/ivZero"
                        android:layout_alignStart="@+id/ivZero"
                        android:layout_marginTop="20dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewStyleEven.Odd">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:layout_marginEnd="25dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_1"
                        android:layout_marginEnd="13dp"
                        android:layout_alignTop="@+id/imageView"
                        android:layout_toStartOf="@+id/imageView"
                        android:layout_marginTop="11dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_1"
                        android:layout_marginTop="18dp"
                        android:layout_below="@+id/imageView"
                        android:layout_alignEnd="@+id/imageView" />

                </RelativeLayout>




            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewStyleEven">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/ivTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:id="@+id/tvTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="@string/title_2"
                        android:layout_alignTop="@+id/ivTwo"
                        android:layout_toEndOf="@+id/ivTwo" />

                    <TextView
                        android:id="@+id/tvTwoDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc_3"
                        android:layout_below="@+id/ivTwo"
                        android:layout_alignStart="@+id/ivTwo"
                        android:layout_marginTop="20dp" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


    </LinearLayout>



</android.support.v4.widget.NestedScrollView>